Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2595,7 +2595,7 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			object-fit: cover; /* Maintain aspect ratio and cover the container */
+			object-fit: fill; /* Maintain aspect ratio and cover the container */
 			border-radius: 0.35em;
 		}
 
